# fastAPI

./: .local.env  .prod.env  Makefile  main.py  pyproject.toml  req.txt  settings.py
src/: main.py  mocks.py
src/handlers/: __init__.py  ping.py  tasks.py
src/schemas/: task.py
