[project]
name = "env"
version = "0.1.0"
description = ""
authors = [
    {name = "Rusich",email = "vasenin@verqor.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
